# ReMe

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  README_ZH.md  TODO.md  contribution.html  example.env  future_work.html  genindex.html  index.html  installation.html  mcp_quick_start.html  mkdocs.yml  objects.inv  pyproject.toml  quick_start.html  search.html  searchindex.js  sitemap.xml  test.py  test_workspace.jsonl  test_workspace2.jsonl  vector_store_api_guide.html
contribution/: index.html
cookbook/: experiment_overview.html  vector_store_quick_start.md
doc/: ROADMAP.md  advanced_guide.md  configuration_guide.md  future_roadmap.md  global_params.md  mcp_quick_start.md  operations.md  operations_documentation.md  quick_start.md  service_params.md  vector_store_setup.md
docs/: _config.yml  _toc.yml  contribution.md  experiment_overview.md  future_work.md  index.html  index.md  installation.md  mcp_quick_start.md  quick_start.md  todo.md  vector_store_api_guide.md
en/: README.html  memoryscope.core.utils.html  memoryscope.core.utils.tool_functions.html  searchindex.js
experiencemaker/: __init__.py  app.py  client.py  em_service.py  service.py
experiment_overview/: index.html
future_work/: index.html
mcp_quick_start/: index.html
memoryscope/: README.md  README_JP.md  README_ZH.md
personal_memory/: personal_memory.html  personal_retrieve_ops.html  personal_summary_ops.html
reme_ai/: __init__.py  app.py
search/: search_index.json
sop_memory/: making_sop_memories.html
task_memory/: task_memory.html  task_retrieve_ops.html  (+1 more)
(+450 files in other folders)
