[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reme_ai"
version = "0.1.0"
description = "Remember me of memory and experience"
authors = [{ name = "reme_ai team", email = "reme_ai@alibaba-inc.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [

]

[tool.setuptools.packages.find]
where = ["."]
include = ["reme_ai*"]
exclude = ["memoryscope*"]

[tool.setuptools.package-data]
experiencemaker = [
    "config/*.yaml", 
]

[project.scripts]
reme = "reme_ai.app:main"
